<resources>
    <string name="app_name">Submission2</string>
    <string name="change_language_settings">Change Language</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv Show </string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="TextOverview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="overview">Overview</string>
    <string name="title">Aquaman</string>
    <string name="release">2018</string>
    <string name="poster">poster</string>
    <string name="avengers_infinity_war">Avengers: Infinity War</string>
    <string name="april_25_2018">April 25, 2018</string>
    <string name="score">Score</string>
    <string name="languange">Language</string>
    <string name="runtime">Runtime</string>
    <string name="deskripsi">Description</string>
    <string name="tv_6">V</string>
    <string name="tv_7">L</string>
    <string name="tv_8">D</string>
    <string-array name="data_movie_name">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bumblebee</item>
        <item>Deadpool 2</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_movie_overview">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy\'s life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_movie_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2015</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
    </string-array>
    <string-array name="movies_score">
        <item>68</item>
        <item>83</item>
        <item>69</item>
        <item>65</item>
        <item>75</item>
        <item>77</item>
        <item>61</item>
        <item>65</item>
        <item>84</item>
        <item>66</item>
    </string-array>
    <string-array name="data_movie_date">
        <item>December 21, 2018 | Theatrical</item>
        <item>April 23, 2018 | Premiere</item>
        <item>November 12, 2018 | Premiere</item>
        <item>December 21, 2018 | Theatrical</item>
        <item>May 10, 2018 | Theatrical (limited)</item>
        <item>February 22, 2019 | Theatrical</item>
        <item>December 14, 2018 | Theatrical</item>
        <item>January 17, 2019 | Theatrical</item>
        <item>December 1, 2018 | Premiere</item>
        <item>October 1, 2018 | Premiere</item>
    </string-array>
    <string-array name="movies_languange">
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>ID</item>
        <item>EN</item>
        <item>EN</item>
    </string-array>
    <string-array name="movies_runtime">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>1h 54m</item>
        <item>2h 1m</item>
        <item>1h 44m</item>
        <item>2h 9m</item>
        <item>1h 34m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="movies_budget">
        <item>$160,000,000.00</item>
        <item>$300,000,000.00</item>
        <item>$19,800,000.00</item>
        <item>$135,000,000.00</item>
        <item>$110,000,000.00</item>
        <item>$129,000,000.00</item>
        <item>$100,000,000.00</item>
        <item>-</item>
        <item>$90,000,000.00</item>
        <item>$116,000,000.00</item>
    </string-array>
    <string-array name="movies_revenue">
        <item>$1,143,689,193.00</item>
        <item>$2,046,239,637.00</item>
        <item>-</item>
        <item>$465,895,025.00</item>
        <item>$741,547,413.00</item>
        <item>$517,526,875.00</item>
        <item>$104,236,467.00</item>
        <item>-</item>
        <item>$375,450,417.00</item>
        <item>$855,013,954.00</item>
    </string-array>
    <string-array name="data_tv_name">
        <item>Chernobyl</item>
        <item>The Mandalorian</item>
        <item>The Witcher</item>
        <item>Mr. Robot</item>
        <item>Locke &amp; Key</item>
        <item>Game of Thrones</item>
        <item>Breaking Bad</item>
        <item>Star Trek: Picard</item>
        <item>The Outsider</item>
        <item>Fullmetal Alchemist: Brotherhood</item>
    </string-array>
    <string-array name="data_tv_overview">
        <item>The true story of one of the worst man-made catastrophes in history: the catastrophic nuclear accident at Chernobyl. A tale of the brave men and women who sacrificed to save Europe from unimaginable disaster.</item>
        <item>After the fall of the Galactic Empire, lawlessness has spread throughout the galaxy. A lone gunfighter makes his way through the outer reaches, earning his keep as a bounty hunter.</item>
        <item>Geralt of Rivia, a mutated monster-hunter for hire, journeys toward his destiny in a turbulent world where people often prove more wicked than beasts.</item>
        <item>A contemporary and culturally resonant drama about a young programmer, Elliot, who suffers from a debilitating anti-social disorder and decides that he can only connect to people by hacking them. He wields his skills as a weapon to protect the people that he cares about. Elliot will find himself in the intersection between a cybersecurity firm he works for and the underworld organizations that are recruiting him to bring down corporate America.</item>
        <item>Three siblings who move into their ancestral estate after their father\'s gruesome murder discover their new home\'s magical keys, which must be used in their stand against an evil creature who wants the keys and their powers.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>When Walter White, a New Mexico chemistry teacher, is diagnosed with Stage III cancer and given a prognosis of only two years left to live. He becomes filled with a sense of fearlessness and an unrelenting desire to secure his family\'s financial future at any cost as he enters the dangerous world of drugs and crime.</item>
        <item>Set twenty years after the events of Star Trek Nemesis, we follow the now-retired Admiral Picard into the next chapter of his life.</item>
        <item>When an insidious supernatural force edges its way into a seemingly straightforward investigation into the gruesome murder of a young boy, it leads a seasoned cop and an unorthodox investigator to question everything they believe in.</item>
        <item>Edward and Alphonse Elric\'s reckless disregard for alchemy\'s fun­damental laws ripped half of Ed\'s limbs from his body and left Al\'s soul clinging to a cold suit of armor. To restore what was lost, the brothers scour a war-torn land for the Philosopher\'s Sto­ne, a fabled relic which grants the ability to perform alchemy in impossible ways. \n\n The Elrics are not alone in their search; the corrupt State Military is also eager to harness the artifact\'s power. So too are the strange Homunculi and their shadowy creator. The mythical gem lures exotic alchemists from distant kingdoms, scarring some deeply enough to inspire murder. As the Elrics find their course altered by these enemies and allies, their purpose remains unchanged – and their bond unbreakable.</item>
    </string-array>
    <string-array name="tv_show_score">
        <item>87</item>
        <item>81</item>
        <item>81</item>
        <item>80</item>
        <item>88</item>
        <item>82</item>
        <item>85</item>
        <item>80</item>
        <item>82</item>
        <item>82</item>
    </string-array>
    <string-array name="tv_show_languange">
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>EN</item>
        <item>JP</item>
    </string-array>
</resources>