<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view_movie"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_photo_movie"
            android:layout_width="153dp"
            android:layout_height="192dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/poster"
            android:scaleType="fitCenter"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_name_movie"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/img_photo_movie"
            android:text="@string/avengers_infinity_war"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- -->

        <TextView
            android:id="@+id/tv_date_movie"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_description_movie"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="11dp"
            android:visibility = "gone"
            android:layout_toEndOf="@+id/textView6"
            android:text="@string/april_25_2018" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name_movie"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_photo_movie"
            android:text="@string/score" />

        <TextView
            android:id="@+id/tv_score_movie"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name_movie"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/textView6"
            android:text="@string/score" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_photo_movie"
            android:text="@string/languange" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_photo_movie"
            android:text="@string/runtime" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_photo_movie"
            android:text="@string/deskripsi" />

        <TextView
            android:id="@+id/tv_languange_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/textView7"
            android:text="@string/tv_7" />

        <TextView
            android:id="@+id/tv_runtime_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/textView8"
            android:text="@string/tv_8" />

        <TextView
            android:id="@+id/tv_description_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/img_photo_movie"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/lorem" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>