<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/img_imageBGTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/poster_aquaman"
                android:contentDescription="@string/release" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom">

                <ImageView
                    android:id="@+id/img_photoPosterTv"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:padding="8dp"
                    android:src="@drawable/poster_aquaman"
                    android:contentDescription="@string/release" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_yearTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_judulOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_overview_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:paddingTop="4dp"
            android:text="@string/TextOverview"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>