<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_imageBGMovie"
            android:layout_width="0dp"
            android:layout_height="287dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY"
            android:src="@drawable/poster_preman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_photoPosterMovie"
            android:layout_width="161dp"
            android:layout_height="223dp"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/poster"
            android:padding="8dp"
            android:src="@drawable/poster_aquaman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_titleMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photoPosterMovie" />

        <TextView
            android:id="@+id/tv_yearMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.274"
            app:layout_constraintStart_toEndOf="@+id/tv_titleMovie"
            android:visibility = "gone"
            app:layout_constraintTop_toBottomOf="@+id/img_photoPosterMovie" />

        <TextView
            android:id="@+id/tv_judulOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="16dp"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleMovie" />

        <TextView
            android:id="@+id/tv_overview_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            android:paddingTop="4dp"
            android:text="@string/TextOverview"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_judulOverview" />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/img_imageBGMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/poster_preman"
                    android:contentDescription="@string/poster" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="bottom">

                    <ImageView
                        android:id="@+id/img_photoPosterMovie"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:padding="8dp"
                        android:src="@drawable/poster_aquaman"
                        android:contentDescription="@string/poster" />
                </RelativeLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_titleMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_yearMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_judulOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/overview"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_overview_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:paddingTop="4dp"
                android:text="@string/TextOverview"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>